# AtomicCards-DataWrangling-Python

./: .gitignore  LICENSE  README.md  mtg_atomiccards_followalong_plan.md  pyproject.toml  requirements.txt
data/: schemas.json
data/analytics/: analytics.duckdb  product_and_design_analytics.duckdb
data/staging/: preview_stg_cards.csv  preview_stg_faces.csv  preview_stg_keywords.csv  preview_stg_sets.csv  staging_report.json  stg_faces.parquet  stg_keywords.parquet  stg_sets.parquet  stg_types.parquet
data/warehouse/: analytics.duckdb  analytics_card_faces.parquet  analytics_keywords.csv  analytics_keywords.parquet  analytics_types.csv  analytics_types.parquet  core_card_faces.parquet  core_keywords.csv  core_sets.csv  core_sets.parquet  core_types.csv  warehouse_report.json
docs/: data_dictionary.md  decisions_log.md  pipeline_architecture.md  schemas.json  sources.md
scripts/: build_analytics_tables.py  build_core_tables.py  build_staging_tables.py  clean_dataset.py  create_staging_tables.py  exploratory.py  extract_mtgjson.py  extract_mtgjson_atomic_cards.py  extract_mtgjson_data.py  filter_paper_constructed_cards.py  load_analytics_database.py  load_into_analytics_database.py  paper_constructed_cards.py  run_pipeline.py  run_queries.py  select_paper_constructed.py  select_paper_constructed_cards.py
setup/: mac_linux.sh  windows.ps1
sql/macros/: 01_time_buckets.sql
sql/queries/: 01_design_complexity_trend.sql  02_keyword_density_trend.sql  03_creature_stat_efficiency_trend.sql  04_mechanic_frequency_by_color.sql  05_color_signature_mechanics.sql  (+4 more)
(+18 files in other folders)
