[project]
name = "atomiccards-datawrangling-python"
version = "0.1.0"
description = "End-to-end data preparation pipeline for the MTGJSON AtomicCards dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.60.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.7",
    "narwhals==2.9.0",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "plotly==6.3.1",
    "pyarrow==22.0.0",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tzdata==2025.2",
]
