[project]
name = "atomiccards-datawrangling-python"
version = "0.1.0"
description = "End-to-end data preparation pipeline for the MTGJSON AtomicCards dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.1",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "python-slugify>=8.0.4",
    "requests>=2.32.5",
]
